--- a/django/mysql/docker-compose.yml
+++ b/django/mysql/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '2'
+version: "2"
 
 services:
-
   # mysql
   mysql:
     image: mysql:5.7.21
@@ -12,7 +11,9 @@ services:
     container_name: "mysql-app-django"
     environment:
       MYSQL_ROOT_PASSWORD: pwd
- 
+      MYSQL_USER: root
+      MYSQL_PASSWORD: pwd
+
   # mysql data
   mysql-data:
     image: mysql:5.7.21
@@ -20,7 +21,7 @@ services:
     volumes:
       - ./db/mysql:/var/lib/mysql
     command: "true"
-  
+
   # phpmyadmin
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
